--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,15 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      # Cho phép chạy gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Run tests
-        run: mvn test
+        run: ./gradlew test
 
       - name: Build jar
-        run: mvn clean package -DskipTests
+        run: ./gradlew build -x test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
