--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,10 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            set -e
+
             echo "== Check & install Docker =="
-            if ! command -v docker &> /dev/null
-            then
+            if ! command -v docker &> /dev/null; then
               echo "Docker not found, installing..."
               sudo apt-get update -y
               sudo apt-get install -y docker.io
