Update ci/cd flow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI - Build Test & Push Docker Image & Deploy EC2
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -38,12 +38,13 @@ jobs:
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest
 
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to EC2 via SSH
+      - name: Deploy to EC2 (Amazon Linux) via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -52,11 +53,14 @@ jobs:
           script: |
             set -e
 
-            echo "== Check & install Docker =="
+            echo "== OS Info =="
+            cat /etc/os-release || true
+
+            echo "== Check & install Docker (Amazon Linux) =="
             if ! command -v docker &> /dev/null; then
-              echo "Docker not found, installing..."
-              sudo apt-get update -y
-              sudo apt-get install -y docker.io
+              echo "Docker not found. Installing..."
+              sudo yum update -y
+              sudo yum install -y docker
               sudo systemctl start docker
               sudo systemctl enable docker
               sudo usermod -aG docker $USER
@@ -64,15 +68,25 @@ jobs:
               echo "Docker already installed"
             fi
 
-            echo "== Pull new image =="
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest
+            echo "== Verify Docker =="
+            docker --version
 
-            echo "== Stop old container if exists =="
-            docker stop springboot-app || true
-            docker rm springboot-app || true
+            IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest"
+            CONTAINER_NAME="springboot-app"
+
+            echo "== Pull new image =="
+            docker pull $IMAGE
+
+            echo "== Stop & remove old container if exists =="
+            docker stop $CONTAINER_NAME || true
+            docker rm $CONTAINER_NAME || true
 
             echo "== Run new container =="
             docker run -d \
-              --name springboot-app \
+              --name $CONTAINER_NAME \
+              --restart unless-stopped \
               -p 8080:8080 \
-              ${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest
+              $IMAGE
+
+            echo "== Show running containers =="
+            docker ps
