--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   # =========================
-  # 1) CI for PRs and main
+  # 1) CI: Test + Style + Sonar
+  #    (chạy cho cả PR & push main)
   # =========================
   ci:
     name: CI - Test, Style, Sonar
@@ -19,22 +20,23 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # 🔥 rất quan trọng cho Sonar PR & blame
+          fetch-depth: 0   # 🔥 quan trọng cho Sonar PR & blame
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
+          cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew test --no-daemon
 
       - name: Checkstyle
-        run: ./gradlew checkstyleMain checkstyleTest
+        run: ./gradlew checkstyleMain checkstyleTest --no-daemon
 
       # ===== SonarCloud Scan =====
       - name: SonarCloud Scan
@@ -52,12 +54,12 @@ jobs:
 
   # =========================
   # 2) Build & Push Docker
-  #    (chỉ khi push main)
+  #    (CHỈ khi push main)
   # =========================
   build:
     name: Build & Push Docker Image
     needs: ci
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -69,12 +71,13 @@ jobs:
         with:
           distribution: temurin
           java-version: 21
+          cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build jar
-        run: ./gradlew build -x test
+      - name: Build jar (skip tests)
+        run: ./gradlew build -x test --no-daemon
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -91,12 +94,12 @@ jobs:
 
   # =========================
   # 3) Deploy to EC2
-  #    (chỉ khi push main)
+  #    (CHỈ khi push main)
   # =========================
   deploy:
     name: Deploy to EC2
     needs: build
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
