--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '4.0.1'
     id 'io.spring.dependency-management' version '1.1.7'
     id "org.sonarqube" version "5.0.0.4638"
+    id 'checkstyle'
 }
 
 group = 'com.example'
@@ -18,6 +19,18 @@ java {
 repositories {
     mavenCentral()
 }
+checkstyle {
+    toolVersion = '10.12.3'
+    configFile = file("$rootDir/config/checkstyle/checkstyle.xml")
+}
+
+tasks.withType(Checkstyle).configureEach {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
