--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Test, Quality Gate, Build, Push & Deploy
+name: CI - Test, Build, Push & Deploy
 
 on:
   pull_request:
@@ -9,18 +9,16 @@ on:
 
 jobs:
   # =========================
-  # 1) CI: Test + Style + Sonar
+  # 1) CI: Test + Style
   #    (chạy cho cả PR & push main)
   # =========================
   ci:
-    name: CI - Test, Style, Sonar
+    name: CI - Test & Style
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # 🔥 quan trọng cho Sonar PR & blame
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -37,19 +35,6 @@ jobs:
 
       - name: Checkstyle
         run: ./gradlew checkstyleMain checkstyleTest --no-daemon
-
-      # ===== SonarCloud Scan =====
-      - name: SonarCloud Scan
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-          SONAR_ORG: ${{ secrets.SONAR_ORG }}
-        run: |
-          ./gradlew sonarqube \
-            -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-            -Dsonar.organization=$SONAR_ORG \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
 
 
   # =========================
@@ -111,24 +96,6 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -e
-
-            echo "== OS Info =="
-            cat /etc/os-release || true
-
-            echo "== Check & install Docker (Amazon Linux) =="
-            if ! command -v docker &> /dev/null; then
-              echo "Docker not found. Installing..."
-              sudo yum update -y
-              sudo yum install -y docker
-              sudo systemctl start docker
-              sudo systemctl enable docker
-              sudo usermod -aG docker $USER
-            else
-              echo "Docker already installed"
-            fi
-
-            echo "== Verify Docker =="
-            sudo docker --version
 
             IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/springboot-app:latest"
             CONTAINER_NAME="springboot-app"
